@@ -1,5 +1,8 @@
 package com.skj2393.springmvcpractice.controller.api;
 
+import com.skj2393.springmvcpractice.controller.constant.PlaceType;
+import com.skj2393.springmvcpractice.dto.APIDataResponse;
+import com.skj2393.springmvcpractice.dto.PlaceDTO;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
@@ -11,28 +14,46 @@ import java.util.List;
 public class APIPlaceController {
 
     @GetMapping("/places")
-    public List<String> getPlaces(){
-        return Collections.unmodifiableList(Arrays.asList("place1","place2"));
+    public APIDataResponse<List<PlaceDTO>> getPlaces() {
+        return APIDataResponse.of(List.of(PlaceDTO.of(
+                PlaceType.COMMON,
+                "랄라배드민턴장",
+                "서울시 강남구 강남대로 1234",
+                "010-1234-5678",
+                "신장개업",
+                30
+        )));
     }
 
     @PostMapping("/places")
-    public Boolean createPlace(){
+    public Boolean createPlace() {
         return true;
     }
 
 
     @GetMapping("/places/{placeId}")
-    public String getPlace(@PathVariable Integer placeId){
-        return String.format("place + %s",placeId);
+    public APIDataResponse<PlaceDTO> getPlace(@PathVariable Integer placeId) {
+
+        if(placeId.equals(2)){
+            return APIDataResponse.of(null);
+        }
+        return APIDataResponse.of(PlaceDTO.of(
+                PlaceType.COMMON,
+                "랄라배드민턴장",
+                "서울시 강남구 강남대로 1234",
+                "010-1234-5678",
+                "신장개업",
+                30
+        ));
     }
 
     @PutMapping("/places/{placeId}")
-    public Boolean modifyPlace(@PathVariable Integer placeId){
+    public Boolean modifyPlace(@PathVariable Integer placeId) {
         return true;
     }
 
     @DeleteMapping("/places/{placeId}")
-    public Boolean deletePlace(@PathVariable Integer placeId){
+    public Boolean deletePlace(@PathVariable Integer placeId) {
         return true;
     }
 }
